[gd_scene load_steps=25 format=2]

[ext_resource path="res://Mouse/mouse_normal.png" type="Texture" id=1]
[ext_resource path="res://GameManager.gd" type="Script" id=2]
[ext_resource path="res://tiles.png" type="Texture" id=3]
[ext_resource path="res://gui.png" type="Texture" id=4]
[ext_resource path="res://whitebox.png" type="Texture" id=5]
[ext_resource path="res://Other/Sleepy Sunflower Loop.wav" type="AudioStream" id=6]
[ext_resource path="res://Shaders/offsetshadow.shader" type="Shader" id=7]
[ext_resource path="res://Gui/Heart.png" type="Texture" id=8]
[ext_resource path="res://Gui/Win.png" type="Texture" id=9]
[ext_resource path="res://Gui/Scrap0.png" type="Texture" id=10]
[ext_resource path="res://Gui/PlayButton.png" type="Texture" id=11]
[ext_resource path="res://Other/BotIcon.png" type="Texture" id=12]
[ext_resource path="res://Cursor.gd" type="Script" id=13]
[ext_resource path="res://HeldTowerArea.gd" type="Script" id=14]
[ext_resource path="res://Gui/Button.png" type="Texture" id=15]
[ext_resource path="res://Font/Dimbo Regular.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://Gui/ResetButton.png" type="Texture" id=17]

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 7 )
shader_param/offset = Vector2( 1, 1 )
shader_param/modulate = Color( 0.203922, 0.203922, 0.203922, 0.666667 )

[sub_resource type="TileSet" id=1]
23/name = "tiles.png 1"
23/texture = ExtResource( 3 )
23/tex_offset = Vector2( 0, 0 )
23/modulate = Color( 1, 1, 1, 1 )
23/region = Rect2( 16, 0, 64, 16 )
23/tile_mode = 2
23/autotile/icon_coordinate = Vector2( 0, 0 )
23/autotile/tile_size = Vector2( 16, 16 )
23/autotile/spacing = 0
23/autotile/occluder_map = [  ]
23/autotile/navpoly_map = [  ]
23/autotile/priority_map = [  ]
23/autotile/z_index_map = [  ]
23/occluder_offset = Vector2( 0, 0 )
23/navigation_offset = Vector2( 0, 0 )
23/shape_offset = Vector2( 0, 0 )
23/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
23/shape_one_way = false
23/shape_one_way_margin = 0.0
23/shapes = [  ]
23/z_index = 0
24/name = "tiles.png 2"
24/texture = ExtResource( 3 )
24/tex_offset = Vector2( 0, 0 )
24/modulate = Color( 1, 1, 1, 1 )
24/region = Rect2( 0, 0, 16, 16 )
24/tile_mode = 0
24/occluder_offset = Vector2( 0, 0 )
24/navigation_offset = Vector2( 0, 0 )
24/shape_offset = Vector2( 0, 0 )
24/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
24/shape_one_way = false
24/shape_one_way_margin = 0.0
24/shapes = [  ]
24/z_index = 0
25/name = "tiles.png 3"
25/texture = ExtResource( 3 )
25/tex_offset = Vector2( 0, 0 )
25/modulate = Color( 1, 1, 1, 1 )
25/region = Rect2( 80, 0, 16, 16 )
25/tile_mode = 0
25/occluder_offset = Vector2( 0, 0 )
25/navigation_offset = Vector2( 0, 0 )
25/shape_offset = Vector2( 0, 0 )
25/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
25/shape_one_way = false
25/shape_one_way_margin = 0.0
25/shapes = [  ]
25/z_index = 0

[sub_resource type="TileSet" id=9]
0/name = "gui.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 48, 16 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "gui.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 16, 48, 16 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 16, 16 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "gui.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 32, 32, 16 )
2/tile_mode = 2
2/autotile/icon_coordinate = Vector2( 0, 0 )
2/autotile/tile_size = Vector2( 16, 16 )
2/autotile/spacing = 0
2/autotile/occluder_map = [  ]
2/autotile/navpoly_map = [  ]
2/autotile/priority_map = [  ]
2/autotile/z_index_map = [  ]
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[sub_resource type="TileSet" id=6]
0/name = "gui.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 80, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "gui.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 64, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="Curve2D" id=5]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -43, 290, 0, 0, 0, 0, 162, 290, 0, 0, 0, 0, 162, 418, 0, 0, 0, 0, 354, 418, 0, 0, 0, 0, 354, 98, 0, 0, 0, 0, 482, 98, 0, 0, 0, 0, 482, 546, 0, 0, 0, 0, 610, 546, 0, 0, 0, 0, 610, 98, 0, 0, 0, 0, 738, 98, 0, 0, 0, 0, 738, 546, 0, 0, 0, 0, 866, 546, 0, 0, 0, 0, 866, 354, 0, 0, 0, 0, 1079, 354 )
}

[sub_resource type="Theme" id=11]
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/decrement_pressed = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/icons/increment_pressed = null
VScrollBar/styles/grabber = null
VScrollBar/styles/grabber_highlight = null
VScrollBar/styles/grabber_pressed = null
VScrollBar/styles/scroll = null
VScrollBar/styles/scroll_focus = null

[sub_resource type="DynamicFont" id=10]
size = 26
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 16 )

[node name="BaseScene" type="Node2D"]

[node name="GameManager" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Cursor" type="Node2D" parent="."]
z_index = 50
script = ExtResource( 13 )

[node name="HeldTowerArea" type="Node2D" parent="Cursor"]
z_index = 4
z_as_relative = false
script = ExtResource( 14 )

[node name="Sprite" type="Sprite" parent="Cursor"]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
offset = Vector2( 4, 4 )

[node name="HeldTower" type="Sprite" parent="Cursor"]
material = SubResource( 8 )
scale = Vector2( 6, 6 )
z_index = -1

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 65, 64 )
scale = Vector2( 4, 4 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 25, 0, 1, 25, 0, 2, 25, 0, 3, 25, 0, 4, 24, 0, 5, 25, 0, 6, 25, 0, 7, 25, 0, 8, 24, 0, 9, 25, 0, 10, 25, 0, 11, 25, 0, 12, 25, 0, 13, 25, 0, 14, 24, 0, 15, 25, 0, 65536, 25, 0, 65537, 25, 0, 65538, 25, 0, 65539, 24, 0, 65540, 25, 0, 65541, 23, 2, 65542, -1610612713, 1, 65543, -1610612713, 2, 65544, 25, 0, 65545, 23, 2, 65546, -1610612713, 1, 65547, -1610612713, 2, 65548, 25, 0, 65549, 25, 0, 65550, 25, 0, 65551, 24, 0, 131072, 25, 0, 131073, 24, 0, 131074, 25, 0, 131075, 25, 0, 131076, 24, 0, 131077, 23, 1, 131078, 25, 0, 131079, 23, 1, 131080, 25, 0, 131081, 23, 1, 131082, 25, 0, 131083, 23, 1, 131084, 24, 0, 131085, 25, 0, 131086, 25, 0, 131087, 25, 0, 196608, 25, 0, 196609, 25, 0, 196610, 25, 0, 196611, 24, 0, 196612, 25, 0, 196613, 23, 1, 196614, 25, 0, 196615, 23, 1, 196616, 24, 0, 196617, 23, 1, 196618, 25, 0, 196619, 23, 1, 196620, 24, 0, 196621, 24, 0, 196622, 25, 0, 196623, 25, 0, 262144, -1610612713, 1, 262145, -1610612713, 1, 262146, -1610612713, 2, 262147, 25, 0, 262148, 25, 0, 262149, 23, 1, 262150, 25, 0, 262151, 23, 1, 262152, 25, 0, 262153, 23, 1, 262154, 25, 0, 262155, 23, 1, 262156, 25, 0, 262157, 25, 0, 262158, 25, 0, 262159, 24, 0, 327680, 25, 0, 327681, 25, 0, 327682, 23, 1, 327683, 25, 0, 327684, 25, 0, 327685, 23, 1, 327686, 25, 0, 327687, 23, 1, 327688, 25, 0, 327689, 23, 1, 327690, 25, 0, 327691, 23, 1, 327692, 25, 0, 327693, 23, 2, 327694, -1610612713, 1, 327695, -1610612713, 1, 393216, 25, 0, 393217, 25, 0, 393218, -1073741801, 2, 393219, -1610612713, 1, 393220, -1610612713, 1, 393221, 1610612759, 2, 393222, 25, 0, 393223, 23, 1, 393224, 25, 0, 393225, 23, 1, 393226, 24, 0, 393227, 23, 1, 393228, 25, 0, 393229, 23, 1, 393230, 25, 0, 393231, 25, 0, 458752, 25, 0, 458753, 24, 0, 458754, 25, 0, 458755, 25, 0, 458756, 25, 0, 458757, 25, 0, 458758, 24, 0, 458759, 23, 1, 458760, 25, 0, 458761, 23, 1, 458762, 25, 0, 458763, 23, 1, 458764, 25, 0, 458765, 23, 1, 458766, 25, 0, 458767, 25, 0, 524288, 25, 0, 524289, 24, 0, 524290, 25, 0, 524291, 24, 0, 524292, 24, 0, 524293, 25, 0, 524294, 25, 0, 524295, -1073741801, 2, 524296, -1610612713, 1, 524297, 1610612759, 2, 524298, 24, 0, 524299, -1073741801, 2, 524300, -1610612713, 1, 524301, 1610612759, 2, 524302, 24, 0, 524303, 25, 0, 589824, 24, 0, 589825, 25, 0, 589826, 25, 0, 589827, 24, 0, 589828, 24, 0, 589829, 25, 0, 589830, 25, 0, 589831, 25, 0, 589832, 25, 0, 589833, 25, 0, 589834, 25, 0, 589835, 25, 0, 589836, 25, 0, 589837, 25, 0, 589838, 25, 0, 589839, 24, 0 )

[node name="TileInterface" type="TileMap" parent="."]
position = Vector2( 64, 64 )
scale = Vector2( 4, 4 )
z_index = 10
tile_set = SubResource( 9 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -1, 2, 0, -65536, 2, 0, -65535, 2, 1, -65534, 2, 0, -65533, 2, 1, -65532, 2, 0, -65531, 2, 1, -65530, 2, 0, -65529, 2, 1, -65528, 2, 0, -65527, 2, 0, -65526, 2, 0, -65525, 2, 1, -65524, 2, 0, -65523, 2, 1, -65522, 2, 1, -65521, 2, 1, -65520, 2, 0, -65519, 2, 0, -65518, 2, 1, -65517, 2, 0, -65516, 2, 1, 65535, 2, 1, 16, 1, 2, 17, 1, 2, 18, 1, 2, 19, 1, 2, 20, 1, 2, 131071, 2, 0, 65552, 1, 2, 65553, 1, 2, 65554, 1, 2, 65555, 1, 2, 65556, 1, 2, 196607, 2, 1, 131088, 1, 2, 131089, 1, 2, 131090, 1, 2, 131091, 1, 2, 131092, 1, 2, 262143, 2, 1, 196624, 1, 2, 196625, 1, 2, 196626, 1, 2, 196627, 1, 2, 196628, 1, 2, 327679, 2, 1, 262160, 1, 2, 262161, 1, 2, 262162, 1, 2, 262163, 1, 2, 262164, 1, 2, 393215, 2, 0, 327696, 1, 2, 327697, 1, 2, 327698, 1, 2, 327699, 1, 2, 327700, 1, 2, 458751, 2, 0, 393232, 1, 2, 393233, 1, 2, 393234, 1, 2, 393235, 1, 2, 393236, 1, 2, 524287, 2, 0, 458768, 1, 2, 458769, 1, 2, 458770, 1, 2, 458771, 1, 2, 458772, 1, 2, 589823, 2, 1, 524304, 1, 2, 524305, 1, 2, 524306, 1, 2, 524307, 1, 2, 524308, 1, 2, 655359, 2, 0, 589840, 1, 2, 589841, 1, 2, 589842, 1, 2, 589843, 1, 2, 589844, 1, 2, 720895, 2, 0, 655360, 2, 1, 655361, 2, 1, 655362, 2, 0, 655363, 2, 0, 655364, 2, 0, 655365, 2, 0, 655366, 2, 0, 655367, 2, 0, 655368, 2, 1, 655369, 2, 1, 655370, 2, 0, 655371, 2, 0, 655372, 2, 0, 655373, 2, 0, 655374, 2, 0, 655375, 2, 1, 655376, 2, 0, 655377, 2, 0, 655378, 2, 0, 655379, 2, 0, 655380, 2, 1, 786431, 2, 0, 720896, 2, 0, 720897, 2, 1, 720898, 2, 1, 720899, 2, 1, 720900, 2, 1, 720901, 2, 1, 720902, 2, 0, 720903, 2, 1, 720904, 2, 0, 720905, 2, 0, 720906, 2, 1, 720907, 2, 0, 720908, 2, 0, 720909, 2, 1, 720910, 2, 0, 720911, 2, 0, 720912, 2, 1, 720913, 2, 1, 720914, 2, 0, 720915, 2, 1, 720916, 2, 0 )

[node name="TileHighlight" type="TileMap" parent="."]
position = Vector2( 64, 64 )
scale = Vector2( 4, 4 )
z_index = 5
tile_set = SubResource( 6 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="MapPath" type="Path2D" parent="."]
self_modulate = Color( 1, 1, 1, 0.701961 )
position = Vector2( 64, 64 )
curve = SubResource( 5 )

[node name="GUI" type="Node2D" parent="."]
z_index = 15

[node name="ScrollContainer" type="ScrollContainer" parent="GUI"]
margin_left = 1114.0
margin_top = 74.0
margin_right = 1114.0
margin_bottom = 704.0
theme = SubResource( 11 )
scroll_horizontal_enabled = false

[node name="CenterContainer" type="CenterContainer" parent="GUI/ScrollContainer"]

[node name="GridContainer" type="GridContainer" parent="GUI/ScrollContainer/CenterContainer"]
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/vseparation = 20
custom_constants/hseparation = 50
columns = 2

[node name="Lines" type="Node2D" parent="GUI"]
position = Vector2( 1114, 74 )

[node name="Line2" type="Sprite" parent="GUI/Lines"]
modulate = Color( 0.282353, 0.141176, 0.254902, 1 )
position = Vector2( -378, 629.5 )
scale = Vector2( 13.44, 0.11 )
texture = ExtResource( 5 )

[node name="Line1" type="Sprite" parent="GUI/Lines"]
modulate = Color( 0.282353, 0.141176, 0.254902, 1 )
position = Vector2( -378, -9.5 )
scale = Vector2( 13.44, 0.11 )
texture = ExtResource( 5 )

[node name="Line3" type="Sprite" parent="GUI/Lines"]
modulate = Color( 0.282353, 0.141176, 0.254902, 1 )
position = Vector2( -1044.5, 310 )
scale = Vector2( 0.11, 6.5 )
texture = ExtResource( 5 )

[node name="Line4" type="Sprite" parent="GUI/Lines"]
modulate = Color( 0.282353, 0.141176, 0.254902, 1 )
position = Vector2( -27.5, 310 )
scale = Vector2( 0.11, 6.5 )
texture = ExtResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="GUI"]
margin_left = 82.0
margin_top = 73.0
margin_right = 158.0
margin_bottom = 110.0

[node name="HeartContainer" type="CenterContainer" parent="GUI/HBoxContainer"]
margin_right = 30.0
margin_bottom = 37.0

[node name="TextureHeart" type="TextureRect" parent="GUI/HBoxContainer/HeartContainer"]
margin_top = 6.0
margin_right = 30.0
margin_bottom = 31.0
rect_min_size = Vector2( 30, 25 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="HealthLabel" type="Label" parent="GUI/HBoxContainer"]
margin_left = 34.0
margin_top = 2.0
margin_right = 63.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 10 )
text = "150"

[node name="Filler" type="CenterContainer" parent="GUI/HBoxContainer"]
margin_left = 67.0
margin_right = 97.0
margin_bottom = 37.0
rect_min_size = Vector2( 30, 0 )

[node name="ScrapContainer" type="CenterContainer" parent="GUI/HBoxContainer"]
margin_left = 101.0
margin_right = 126.0
margin_bottom = 37.0

[node name="TextureHeart" type="TextureRect" parent="GUI/HBoxContainer/ScrapContainer"]
margin_top = 6.0
margin_right = 25.0
margin_bottom = 31.0
rect_min_size = Vector2( 25, 25 )
texture = ExtResource( 10 )
expand = true
stretch_mode = 5

[node name="ScrapLabel" type="Label" parent="GUI/HBoxContainer"]
margin_left = 130.0
margin_top = 2.0
margin_right = 160.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 10 )
text = "100"

[node name="RoundInfo" type="HBoxContainer" parent="GUI"]
margin_left = 82.0
margin_top = 654.0
margin_right = 169.0
margin_bottom = 691.0

[node name="RoundLabel" type="Label" parent="GUI/RoundInfo"]
margin_top = 2.0
margin_right = 85.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 10 )
text = "ROUND: #"

[node name="Filler" type="CenterContainer" parent="GUI/RoundInfo"]
margin_left = 89.0
margin_right = 119.0
margin_bottom = 37.0
rect_min_size = Vector2( 30, 0 )

[node name="NextLabel" type="Label" parent="GUI/RoundInfo"]
margin_left = 123.0
margin_top = 2.0
margin_right = 264.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 10 )
text = "Next round in: #"

[node name="SpeedSprite" type="TextureRect" parent="GUI"]
margin_left = 1246.0
margin_top = 734.0
margin_right = 1260.0
margin_bottom = 743.0
rect_scale = Vector2( 8, 8 )
texture = ExtResource( 11 )

[node name="HelperInfo" type="HBoxContainer" parent="GUI"]
margin_left = 839.0
margin_top = 740.0
margin_right = 1174.0
margin_bottom = 805.0

[node name="BotContainer" type="CenterContainer" parent="GUI/HelperInfo"]
margin_right = 60.0
margin_bottom = 67.0

[node name="TextureBot" type="TextureRect" parent="GUI/HelperInfo/BotContainer"]
margin_top = 3.0
margin_right = 60.0
margin_bottom = 63.0
rect_min_size = Vector2( 60, 60 )
texture = ExtResource( 12 )
expand = true
stretch_mode = 6

[node name="BotLabel" type="Label" parent="GUI/HelperInfo"]
margin_left = 64.0
margin_top = 17.0
margin_right = 121.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 10 )
text = "BUY: $"

[node name="Filler" type="CenterContainer" parent="GUI/HelperInfo"]
margin_left = 125.0
margin_right = 155.0
margin_bottom = 67.0
rect_min_size = Vector2( 30, 0 )

[node name="DescLabel" type="Label" parent="GUI/HelperInfo"]
margin_left = 159.0
margin_right = 348.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 10 )
text = "Bots help you maintain
 your towers!"

[node name="TowerInfo" type="HBoxContainer" parent="GUI"]
margin_left = 74.0
margin_top = 740.0
margin_right = 409.0
margin_bottom = 805.0

[node name="SellContainer" type="CenterContainer" parent="GUI/TowerInfo"]
margin_right = 120.0
margin_bottom = 70.0

[node name="TextureButtonSell" type="TextureRect" parent="GUI/TowerInfo/SellContainer"]
margin_right = 120.0
margin_bottom = 70.0
rect_min_size = Vector2( 120, 70 )
texture = ExtResource( 15 )
expand = true
stretch_mode = 6

[node name="SellLabel" type="Label" parent="GUI/TowerInfo/SellContainer"]
margin_left = 12.0
margin_top = 19.0
margin_right = 108.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 10 )
text = "SELL: $100"

[node name="Filler" type="CenterContainer" parent="GUI/TowerInfo"]
margin_left = 124.0
margin_right = 154.0
margin_bottom = 70.0
rect_min_size = Vector2( 30, 0 )

[node name="TargetContainer" type="CenterContainer" parent="GUI/TowerInfo"]
margin_left = 158.0
margin_right = 308.0
margin_bottom = 70.0

[node name="TextureButtonTarget" type="TextureRect" parent="GUI/TowerInfo/TargetContainer"]
margin_right = 150.0
margin_bottom = 70.0
rect_min_size = Vector2( 150, 70 )
texture = ExtResource( 15 )
expand = true
stretch_mode = 1

[node name="TargetLabel" type="Label" parent="GUI/TowerInfo/TargetContainer"]
margin_left = 8.0
margin_top = 19.0
margin_right = 141.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 10 )
text = "TARGET: CLOSE"

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[node name="OverlayScreen" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
z_index = 49
texture = ExtResource( 9 )
centered = false

[node name="ResetContainer" type="CenterContainer" parent="OverlayScreen"]
margin_left = 624.0
margin_top = 572.0
margin_right = 724.0
margin_bottom = 672.0

[node name="TextureReset" type="TextureRect" parent="OverlayScreen/ResetContainer"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 17 )
expand = true
stretch_mode = 6

[connection signal="gui_input" from="GUI/SpeedSprite" to="GameManager" method="_on_SpeedSprite_gui_input"]
[connection signal="gui_input" from="GUI/HelperInfo/BotContainer/TextureBot" to="GameManager" method="_on_TextureBot_gui_input"]
[connection signal="gui_input" from="GUI/TowerInfo/SellContainer" to="GameManager" method="_on_SellContainer_gui_input"]
[connection signal="gui_input" from="GUI/TowerInfo/TargetContainer" to="GameManager" method="_on_TargetContainer_gui_input"]
[connection signal="gui_input" from="OverlayScreen/ResetContainer" to="GameManager" method="_on_ResetContainer_gui_input"]
